--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ video { display:none; }
 </head>
 <body>
 
-<video id="video" autoplay></video>
+<video id="video" autoplay playsinline muted></video>
 
 <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/postprocessing/EffectComposer.js"></script>
@@ -22,6 +22,16 @@ video { display:none; }
 
 <script>
 /* SCENE */
+  navigator.mediaDevices.getUserMedia({
+  video: { facingMode: "user" },
+  audio: false
+}).then(stream => {
+  const video = document.getElementById("video");
+  video.srcObject = stream;
+  video.play();
+}).catch(err => {
+  alert("Camera error: " + err.message);
+});
 const scene = new THREE.Scene();
 const camera = new THREE.PerspectiveCamera(75, innerWidth/innerHeight, 0.1, 1000);
 camera.position.z = 90;
