--- a/index.html
+++ b/index.html
@@ -1,144 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>AR Hand Particle System v2</title>
+<meta charset="UTF-8" />
+<title>Hand Particle AR</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+
 <style>
-body { margin:0; overflow:hidden; background:black; }
-video { display:none; }
+  body { margin: 0; overflow: hidden; background: black; }
+  video {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+  }
+  canvas {
+    position: fixed;
+    top: 0; left: 0;
+  }
 </style>
 </head>
+
 <body>
 
 <video id="video" autoplay playsinline muted></video>
 
+<!-- THREE JS -->
 <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/postprocessing/EffectComposer.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/postprocessing/RenderPass.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/postprocessing/UnrealBloomPass.js"></script>
 
+<!-- MEDIAPIPE -->
 <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
 
 <script>
-/* SCENE */
-  navigator.mediaDevices.getUserMedia({
+/* ================= CAMERA ================= */
+const video = document.getElementById("video");
+
+navigator.mediaDevices.getUserMedia({
   video: { facingMode: "user" },
   audio: false
 }).then(stream => {
-  const video = document.getElementById("video");
   video.srcObject = stream;
   video.play();
-}).catch(err => {
-  alert("Camera error: " + err.message);
-});
-const scene = new THREE.Scene();
-const camera = new THREE.PerspectiveCamera(75, innerWidth/innerHeight, 0.1, 1000);
-camera.position.z = 90;
+}).catch(e => alert("Camera error: " + e.message));
 
-const renderer = new THREE.WebGLRenderer({ antialias:true });
-renderer.setSize(innerWidth, innerHeight);
+/* ================= THREE SETUP ================= */
+const scene = new THREE.Scene();
+
+const camera = new THREE.PerspectiveCamera(
+  70,
+  window.innerWidth / window.innerHeight,
+  0.1,
+  1000
+);
+camera.position.z = 80;
+
+const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
+renderer.setSize(window.innerWidth, window.innerHeight);
 document.body.appendChild(renderer.domElement);
 
-/* BLOOM */
-const composer = new THREE.EffectComposer(renderer);
-composer.addPass(new THREE.RenderPass(scene, camera));
-const bloom = new THREE.UnrealBloomPass(
-  new THREE.Vector2(innerWidth, innerHeight),
-  1.5, 0.4, 0.85
-);
-composer.addPass(bloom);
-
-/* PARTICLES */
-const COUNT = 4000;
+/* ================= PARTICLES ================= */
+const COUNT = 2500;
 const geo = new THREE.BufferGeometry();
 const pos = new Float32Array(COUNT * 3);
-let mode = 0;
 
 function createParticles() {
-  for (let i=0;i<COUNT;i++) {
-    let a = Math.random()*Math.PI*2;
-    let r = 25;
-
-    if (mode===0) { // HEART
-      r = 16*Math.pow(Math.sin(a),3);
-      pos[i*3] = r*Math.cos(a);
-      pos[i*3+1] = 13*Math.cos(a)-5*Math.cos(2*a);
-      pos[i*3+2] = (Math.random()-0.5)*10;
-    }
-    if (mode===1) { // SATURN
-      pos[i*3] = r*Math.cos(a);
-      pos[i*3+1] = (Math.random()-0.5)*4;
-      pos[i*3+2] = r*Math.sin(a);
-    }
-    if (mode===2) { // FIREWORK
-      pos[i*3]=(Math.random()-0.5)*50;
-      pos[i*3+1]=(Math.random()-0.5)*50;
-      pos[i*3+2]=(Math.random()-0.5)*50;
-    }
+  for (let i = 0; i < COUNT; i++) {
+    pos[i*3]   = (Math.random()-0.5)*40;
+    pos[i*3+1] = (Math.random()-0.5)*40;
+    pos[i*3+2] = (Math.random()-0.5)*40;
   }
-  geo.setAttribute('position', new THREE.BufferAttribute(pos,3));
+  geo.setAttribute("position", new THREE.BufferAttribute(pos, 3));
 }
 createParticles();
 
 const mat = new THREE.PointsMaterial({
-  size:1.8,
-  color:0xff44ff,
-  transparent:true
+  color: 0xff66ff,
+  size: 1.6,
+  transparent: true
 });
 
 const pts = new THREE.Points(geo, mat);
+pts.position.z = -30;
 scene.add(pts);
 
-/* HAND TRACKING */
+/* ================= HAND TRACKING ================= */
 const hands = new Hands({
-  locateFile:f=>`https://cdn.jsdelivr.net/npm/@mediapipe/hands/${f}`
+  locateFile: f => `https://cdn.jsdelivr.net/npm/@mediapipe/hands/${f}`
 });
 
 hands.setOptions({
-  maxNumHands:1,
-  minDetectionConfidence:0.7,
-  minTrackingConfidence:0.7
+  maxNumHands: 1,
+  minDetectionConfidence: 0.6,
+  minTrackingConfidence: 0.6
 });
 
-hands.onResults(r=>{
-  if(!r.multiHandLandmarks) return;
+hands.onResults(r => {
+  if (!r.multiHandLandmarks || r.multiHandLandmarks.length === 0) return;
 
-  const h=r.multiHandLandmarks[0];
-  const d=Math.hypot(h[8].x-h[4].x,h[8].y-h[4].y);
+  const h = r.multiHandLandmarks[0];
 
-  // EXPAND
-  pts.scale.setScalar(1+d*4);
+  const d = Math.hypot(
+    h[8].x - h[4].x,
+    h[8].y - h[4].y
+  );
 
-  // COLOR
-  mat.color.setHSL(d*3,1,0.6);
+  // OPEN HAND → BIG + COLOR CHANGE
+  pts.scale.setScalar(1 + d * 4);
+  mat.color.setHSL(d * 3, 1, 0.6);
 
-  // PINCH = FIREWORK
-  if(d<0.04){
-    mode=2; createParticles();
-  }
-
-  // OPEN HAND = SHAPE CHANGE
-  if(d>0.2){
-    mode=(mode+1)%3;
-    createParticles();
-  }
+  // PINCH → FIREWORK RESET
+  if (d < 0.04) createParticles();
 });
 
-/* CAMERA */
-const cam=new Camera(document.getElementById('video'),{
-  onFrame:async()=>hands.send({image:video}),
-  width:640,height:480
+/* ================= CAMERA FEED TO MEDIAPIPE ================= */
+const cam = new Camera(video, {
+  onFrame: async () => {
+    await hands.send({ image: video });
+  },
+  width: 640,
+  height: 480
 });
 cam.start();
 
-/* LOOP */
-function animate(){
+/* ================= ANIMATION LOOP ================= */
+function animate() {
   requestAnimationFrame(animate);
-  pts.rotation.y+=0.003;
-  composer.render();
+  pts.rotation.y += 0.002;
+  renderer.render(scene, camera);
 }
 animate();
+
+/* ================= RESIZE ================= */
+window.addEventListener("resize", () => {
+  camera.aspect = window.innerWidth / window.innerHeight;
+  camera.updateProjectionMatrix();
+  renderer.setSize(window.innerWidth, window.innerHeight);
+});
 </script>
+
 </body>
-</html> 
+</html>
