--- a/index.html
+++ b/index.html
@@ -1,84 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<title>Hand Particle AR</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-
-<style>
-  body { margin: 0; overflow: hidden; background: black; }
-  video {
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
-  }
-  canvas {
-    position: fixed;
-    top: 0; left: 0;
-  }
-</style>
+  <meta charset="UTF-8" />
+  <title>Hand Particle AR</title>
+  <style>
+    body { margin:0; overflow:hidden; background:black; }
+    video { display:none; }
+  </style>
 </head>
-
 <body>
 
-<video id="video" autoplay playsinline muted></video>
+<video id="video" autoplay playsinline></video>
 
-<!-- THREE JS -->
+<!-- THREE.JS -->
 <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/postprocessing/EffectComposer.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/postprocessing/RenderPass.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/postprocessing/UnrealBloomPass.js"></script>
 
 <!-- MEDIAPIPE -->
 <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
 
 <script>
-/* ================= CAMERA ================= */
-const video = document.getElementById("video");
-
-navigator.mediaDevices.getUserMedia({
-  video: { facingMode: "user" },
-  audio: false
-}).then(stream => {
-  video.srcObject = stream;
-  video.play();
-}).catch(e => alert("Camera error: " + e.message));
-
-/* ================= THREE SETUP ================= */
+/* ================= SCENE ================= */
 const scene = new THREE.Scene();
 
 const camera = new THREE.PerspectiveCamera(
-  70,
+  75,
   window.innerWidth / window.innerHeight,
   0.1,
   1000
 );
 camera.position.z = 80;
 
-const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
+const renderer = new THREE.WebGLRenderer({ alpha:true, antialias:true });
 renderer.setSize(window.innerWidth, window.innerHeight);
 document.body.appendChild(renderer.domElement);
 
+/* ================= BLOOM ================= */
+const composer = new THREE.EffectComposer(renderer);
+composer.addPass(new THREE.RenderPass(scene, camera));
+composer.addPass(
+  new THREE.UnrealBloomPass(
+    new THREE.Vector2(window.innerWidth, window.innerHeight),
+    1.5, 0.4, 0.85
+  )
+);
+
 /* ================= PARTICLES ================= */
-const COUNT = 2500;
+const COUNT = 1500;
 const geo = new THREE.BufferGeometry();
 const pos = new Float32Array(COUNT * 3);
 
-function createParticles() {
-  for (let i = 0; i < COUNT; i++) {
-    pos[i*3]   = (Math.random()-0.5)*40;
-    pos[i*3+1] = (Math.random()-0.5)*40;
-    pos[i*3+2] = (Math.random()-0.5)*40;
+function createParticles(){
+  for(let i=0;i<COUNT;i++){
+    pos[i*3]   = (Math.random()-0.5)*30;
+    pos[i*3+1] = (Math.random()-0.5)*30;
+    pos[i*3+2] = (Math.random()-0.5)*30;
   }
-  geo.setAttribute("position", new THREE.BufferAttribute(pos, 3));
+  geo.setAttribute("position", new THREE.BufferAttribute(pos,3));
 }
 createParticles();
 
 const mat = new THREE.PointsMaterial({
-  color: 0xff66ff,
   size: 1.6,
-  transparent: true
+  color: 0xff55ff,
+  transparent:true
 });
 
 const pts = new THREE.Points(geo, mat);
@@ -96,25 +84,34 @@ hands.setOptions({
   minTrackingConfidence: 0.6
 });
 
-hands.onResults(r => {
-  if (!r.multiHandLandmarks || r.multiHandLandmarks.length === 0) return;
+hands.onResults(r=>{
+  if(!r.multiHandLandmarks || r.multiHandLandmarks.length===0) return;
 
   const h = r.multiHandLandmarks[0];
 
+  // 👉 Palm center (landmark 9)
+  const palmX = (h[9].x - 0.5) * window.innerWidth;
+  const palmY = -(h[9].y - 0.5) * window.innerHeight;
+
+  pts.position.x = palmX * 0.1;
+  pts.position.y = palmY * 0.1;
+
+  // Thumb – Index distance
   const d = Math.hypot(
     h[8].x - h[4].x,
     h[8].y - h[4].y
   );
 
-  // OPEN HAND → BIG + COLOR CHANGE
+  // Scale + Color
   pts.scale.setScalar(1 + d * 4);
   mat.color.setHSL(d * 3, 1, 0.6);
 
-  // PINCH → FIREWORK RESET
-  if (d < 0.04) createParticles();
+  // Pinch = blast
+  if(d < 0.04) createParticles();
 });
 
-/* ================= CAMERA FEED TO MEDIAPIPE ================= */
+/* ================= CAMERA ================= */
+const video = document.getElementById("video");
 const cam = new Camera(video, {
   onFrame: async () => {
     await hands.send({ image: video });
@@ -124,20 +121,12 @@ const cam = new Camera(video, {
 });
 cam.start();
 
-/* ================= ANIMATION LOOP ================= */
-function animate() {
+/* ================= LOOP ================= */
+function animate(){
   requestAnimationFrame(animate);
-  pts.rotation.y += 0.002;
-  renderer.render(scene, camera);
+  composer.render();
 }
 animate();
-
-/* ================= RESIZE ================= */
-window.addEventListener("resize", () => {
-  camera.aspect = window.innerWidth / window.innerHeight;
-  camera.updateProjectionMatrix();
-  renderer.setSize(window.innerWidth, window.innerHeight);
-});
 </script>
 
 </body>
