--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Hand Particle AR</title>
-  <style>
-    body { margin:0; overflow:hidden; background:black; }
-    video { display:none; }
-  </style>
+<meta charset="UTF-8">
+<title>Hand Firework AR</title>
+<style>
+  body { margin:0; overflow:hidden; background:black; }
+  video { display:none; }
+</style>
 </head>
 <body>
 
 <video id="video" autoplay playsinline></video>
 
-<!-- THREE.JS -->
+<!-- THREE -->
 <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/postprocessing/EffectComposer.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.158.0/examples/js/postprocessing/RenderPass.js"></script>
@@ -23,111 +23,110 @@
 <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
 
 <script>
-/* ================= SCENE ================= */
+/* ========= SCENE ========= */
 const scene = new THREE.Scene();
-
-const camera = new THREE.PerspectiveCamera(
-  75,
-  window.innerWidth / window.innerHeight,
-  0.1,
-  1000
-);
+const camera = new THREE.PerspectiveCamera(75,innerWidth/innerHeight,0.1,1000);
 camera.position.z = 80;
 
-const renderer = new THREE.WebGLRenderer({ alpha:true, antialias:true });
-renderer.setSize(window.innerWidth, window.innerHeight);
+const renderer = new THREE.WebGLRenderer({alpha:true,antialias:true});
+renderer.setSize(innerWidth,innerHeight);
 document.body.appendChild(renderer.domElement);
 
-/* ================= BLOOM ================= */
+/* ========= BLOOM ========= */
 const composer = new THREE.EffectComposer(renderer);
-composer.addPass(new THREE.RenderPass(scene, camera));
-composer.addPass(
-  new THREE.UnrealBloomPass(
-    new THREE.Vector2(window.innerWidth, window.innerHeight),
-    1.5, 0.4, 0.85
-  )
-);
+composer.addPass(new THREE.RenderPass(scene,camera));
+composer.addPass(new THREE.UnrealBloomPass(
+  new THREE.Vector2(innerWidth,innerHeight),1.8,0.4,0.85
+));
 
-/* ================= PARTICLES ================= */
-const COUNT = 1500;
+/* ========= FIREWORK PARTICLES ========= */
+const COUNT = 2000;
 const geo = new THREE.BufferGeometry();
-const pos = new Float32Array(COUNT * 3);
+let pos = new Float32Array(COUNT*3);
+let vel = new Float32Array(COUNT*3);
 
-function createParticles(){
+function fireworkBlast(){
   for(let i=0;i<COUNT;i++){
-    pos[i*3]   = (Math.random()-0.5)*30;
-    pos[i*3+1] = (Math.random()-0.5)*30;
-    pos[i*3+2] = (Math.random()-0.5)*30;
+    pos[i*3]=0; pos[i*3+1]=0; pos[i*3+2]=0;
+
+    const a = Math.random()*Math.PI*2;
+    const s = Math.random()*6;
+    vel[i*3]   = Math.cos(a)*s;
+    vel[i*3+1] = Math.sin(a)*s;
+    vel[i*3+2] = (Math.random()-0.5)*6;
   }
-  geo.setAttribute("position", new THREE.BufferAttribute(pos,3));
+  geo.setAttribute("position",new THREE.BufferAttribute(pos,3));
 }
-createParticles();
+
+fireworkBlast();
 
 const mat = new THREE.PointsMaterial({
-  size: 1.6,
-  color: 0xff55ff,
-  transparent:true
+  size:1.8,
+  color:0xff66ff,
+  transparent:true,
+  opacity:1
 });
 
-const pts = new THREE.Points(geo, mat);
+const pts = new THREE.Points(geo,mat);
 pts.position.z = -30;
 scene.add(pts);
 
-/* ================= HAND TRACKING ================= */
+/* ========= HAND TRACKING ========= */
 const hands = new Hands({
-  locateFile: f => `https://cdn.jsdelivr.net/npm/@mediapipe/hands/${f}`
+  locateFile:f=>`https://cdn.jsdelivr.net/npm/@mediapipe/hands/${f}`
 });
 
 hands.setOptions({
-  maxNumHands: 1,
-  minDetectionConfidence: 0.6,
-  minTrackingConfidence: 0.6
+  maxNumHands:1,
+  minDetectionConfidence:0.6,
+  minTrackingConfidence:0.6
 });
 
 hands.onResults(r=>{
-  if(!r.multiHandLandmarks || r.multiHandLandmarks.length===0) return;
+  if(!r.multiHandLandmarks) return;
+  const h=r.multiHandLandmarks[0];
 
-  const h = r.multiHandLandmarks[0];
+  const px=(h[9].x-0.5)*innerWidth;
+  const py=-(h[9].y-0.5)*innerHeight;
+  pts.position.x=px*0.1;
+  pts.position.y=py*0.1;
 
-  // 👉 Palm center (landmark 9)
-  const palmX = (h[9].x - 0.5) * window.innerWidth;
-  const palmY = -(h[9].y - 0.5) * window.innerHeight;
+  const d=Math.hypot(h[8].x-h[4].x,h[8].y-h[4].y);
 
-  pts.position.x = palmX * 0.1;
-  pts.position.y = palmY * 0.1;
+  mat.color.setHSL(Math.random(),1,0.6);
 
-  // Thumb – Index distance
-  const d = Math.hypot(
-    h[8].x - h[4].x,
-    h[8].y - h[4].y
-  );
-
-  // Scale + Color
-  pts.scale.setScalar(1 + d * 4);
-  mat.color.setHSL(d * 3, 1, 0.6);
-
-  // Pinch = blast
-  if(d < 0.04) createParticles();
+  // 👌 PINCH = FIREWORK
+  if(d<0.04){
+    fireworkBlast();
+    mat.opacity=1;
+  }
 });
 
-/* ================= CAMERA ================= */
-const video = document.getElementById("video");
-const cam = new Camera(video, {
-  onFrame: async () => {
-    await hands.send({ image: video });
-  },
-  width: 640,
-  height: 480
+/* ========= CAMERA ========= */
+const cam = new Camera(video,{
+  onFrame:async()=>{await hands.send({image:video});},
+  width:640,height:480
 });
 cam.start();
 
-/* ================= LOOP ================= */
+/* ========= ANIMATE ========= */
 function animate(){
   requestAnimationFrame(animate);
+
+  for(let i=0;i<COUNT;i++){
+    pos[i*3]+=vel[i*3];
+    pos[i*3+1]+=vel[i*3+1];
+    pos[i*3+2]+=vel[i*3+2];
+
+    vel[i*3+1]-=0.05; // gravity
+  }
+
+  geo.attributes.position.needsUpdate=true;
+  mat.opacity*=0.98;
+
   composer.render();
 }
 animate();
 </script>
-
 </body>
 </html>
